Dark mode is now a feature

--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="hu" id="html">
+<head id="head"> 
     <title>Javascript és CSS test</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="body">
 <h1 id="text">
     Ez a szöveg
 </h1>
 <button id="btnkek">Kék</button>
 <button id="btnred">Piros</button>
+<button id="btndark">Dark mode</button>
 <script src="script.js"></script>
 </body>
 
